--- a/src/main/resources/templates/menu/add.html
+++ b/src/main/resources/templates/menu/add.html
@@ -16,7 +16,7 @@
         <div th:errors="*{name}"></div>
     </div>
 
-    <input type="submit" value="Add Category" />
+    <input type="submit" value="Add Menu" />
 
 </form>
 
