--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -8,6 +8,8 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
+<h1 th:text="${menu.getName()}"></h1>
+
 <ul>
     <li th:each="cheese : ${menu.cheeses}" th:text="${cheese.name}"></li>
 </ul>
